header in progress

--- a/css/src/scss/modules/_colors.scss
+++ b/css/src/scss/modules/_colors.scss
@@ -1,15 +1,15 @@
 // Color Theme Vars
-$color-main: #C79757;
+$color-main: #C8E2D4;
 $color-secondary: #333333;
-$color-third: #C79757;
+$color-third: #C8E2D4;
 
-$color-dark: darken(#C79757, 20%);
-$color-dark-accent: darken(#C79757, 30%);
-$color-extra-dark: darken(#C79757, 40%);
+$color-dark: darken(#C8E2D4, 20%);
+$color-dark-accent: darken(#C8E2D4, 30%);
+$color-extra-dark: darken(#C8E2D4, 40%);
 
-$color-light: lighten(#C79757, 20%);
-$color-light-accent: lighten(#C79757, 30%);
-$color-extra-light: lighten(#C79757, 40%);
+$color-light: lighten(#C8E2D4, 20%);
+$color-light-accent: lighten(#C8E2D4, 30%);
+$color-extra-light: lighten(#C8E2D4, 40%);
 
 $color-white: #fff;
 $color-black: #000;
