--- a/css/src/scss/partials/_sections.scss
+++ b/css/src/scss/partials/_sections.scss
@@ -1,132 +1,13 @@
-.tma-column {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 100%;
-  flex: 1;
-
-  &--double {
-      display: flex;
-      flex-direction: column;
-      flex-basis: 100%;
-      flex: 2;
-  }
-}
-
-.section-title {
-    font-size: 2.75rem;
-    line-height: 1.15;
-    margin-bottom: 24px;
-    white-space: pre-line;
-    @include isMedium {
-        font-size: 3rem;
-        line-height: 1.25;
-        margin-bottom: 36px;
-    }
-}
-
-.section-subtitle {
-    letter-spacing: 8px;
-    writing-mode: vertical-lr;
-    -webkit-writing-mode: vertical-lr;
-    -ms-writing-mode: vertical-lr;
-
-    &--intro {
-        margin-left: auto;
-        padding-left: 12px;
-        transform: rotate(180deg);
-    }
-
-    &--aesthetic {
-        writing-mode: vertical-rl;
-        -webkit-writing-mode: vertical-rl;
-        -ms-writing-mode: vertical-rl;
-        position: absolute;
-        // top: 11rem;
-        display: flex;
-        justify-content: center;
-        height: 100%;
-        z-index: 3;
-    }
-
-    &--surgery {
-      writing-mode: vertical-rl;
-      -webkit-writing-mode: vertical-rl;
-      -ms-writing-mode: vertical-rl;
-      position: absolute;
-      // top: 11rem;
-      // display: flex;
-      // justify-content: center;
-      // height: 100%;
-      z-index: 3;
-      margin-bottom: 100px;
-    }
-
-    &--s-health {
-      writing-mode: vertical-rl;
-      -webkit-writing-mode: vertical-rl;
-      -ms-writing-mode: vertical-rl;
-      position: absolute;
-      // top: 11rem;
-      display: flex;
-      justify-content: center;
-      height: 100%;
-      z-index: 3;
-      right: 0;
-      transform: rotate(180deg);
-    }
-
-    &--pontius {
-      writing-mode: vertical-rl;
-      -webkit-writing-mode: vertical-rl;
-      -ms-writing-mode: vertical-rl;
-      position: absolute;
-      // top: 11rem;
-      display: flex;
-      justify-content: center;
-      height: 100%;
-      z-index: 3;
-    }
-
-    &--telemedicine {
-      writing-mode: vertical-rl;
-      -webkit-writing-mode: vertical-rl;
-      -ms-writing-mode: vertical-rl;
-      position: absolute;
-      // top: 11rem;
-      display: flex;
-      justify-content: center;
-      height: 100%;
-      z-index: 3;
-      color: $f;
-    }
-
-    &--form {
-
-      writing-mode: vertical-rl;
-      -webkit-writing-mode: vertical-rl;
-      -ms-writing-mode: vertical-rl;
-      position: absolute;
-      // top: 11rem;
-      display: flex;
-      justify-content: center;
-      height: 100%;
-      z-index: 3;
-      color: $f;
-      top: 0;
-
-
-  }
-}
 
 section.intro {
     position: relative;
-    min-height: 800px;
+    min-height: 900px;
     display: flex;
     align-items: center;
-    margin-top: 80px;
+    // margin-top: 80px;
 
     @include isLarge {
-      margin-top: 125px;
+      // margin-top: 125px;
     }
 
   .img {
@@ -146,7 +27,7 @@ section.intro {
 
       img {
         object-fit: cover;
-        object-position: right;
+        object-position: center;
         height: 100%;
         width: 100%;
         // @media screen and (max-width: 1240px) {
