--- a/css/src/scss/partials/_buttons.scss
+++ b/css/src/scss/partials/_buttons.scss
@@ -1,10 +1,25 @@
-.ui-btn__container {
+/* BUTTON STYLES */
+
+@mixin btn-fade {
+  transition: all 0s ease-in-out;
+}
+
+@mixin beforeState {
+  content: close-quote;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transition: all 0.5s;
+  // transition-delay: .2s;
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.btn-container {
   margin: 0 0;
   display: flex;
-  // align-items: center;
-  // justify-self: center;
-
-
+  padding-bottom: 10px;
   
   @media screen and (max-width: 992px) {
     flex-direction: column;
@@ -12,59 +27,250 @@
   }
 }
 
-.ui-btn {
-  font-size: calc(var(--scale, 1) * 1rem);
-  // // padding: .75em 1.5em;  
-  border: 0;
-  background: $b;
-  color: $f;
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  line-height: 1;
-  text-decoration: none;
-  cursor: pointer;
-  transition: .3s;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 40px;
-  width: 280px;
+// margin right button
 
-  &__container {
-    margin-top: 40px;
-  }
+.mrb {
+  margin-left: 40px;
 
-  
-  min-width: 170px;
-
-  &:hover {
-    background-color: transparent;
-    border: 1px solid $b;
-    color: $b;
-    
-  }
-
-
-
-  &.ui-btn--xs { --scale: .75;  }
-  &.ui-btn--sm { --scale: .9;   }
-  &.ui-btn--lg { --scale: 1.3;  }
-  &.ui-btn--xl { --scale: 1.65; }
-
-  &.ui-btn-white {
-    background: $f;
-
-    color: #000;
-  }
-
-  &.ui-btn-line {
-    background: $f;
-    color: #000;
-    border: 1px solid $b;
+  @media screen and (max-width: 992px) {
+    margin-left: 0;
   }
 }
 
+// main button container
 
-  
+.ui-btn {
+  position: relative;
+  -webkit-appearance: none;
+  cursor: pointer;
 
+  font-family: $font-secondary;
+
+  color: $m;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  text-transform: uppercase;
+  padding: 0 0 10px;
+
+
+  font-weight: Bold;
+  font-size: 18px;
+  color: #1f3c6a;
+  letter-spacing: 0.05em;
+  line-height: 1.7777777777777777;
+
+
+
+  &:before {
+    content: close-quote;
+    position: absolute;
+    top: 100%;
+    left: 0;
+
+    width: 50px;
+    height: 9px;
+    background-color: #4D90FF;
+
+    transition: all 0.6s cubic-bezier(0, 0.55, 0.45, 1);
+
+  }
+
+  &:after {
+    content: close-quote;
+    position: absolute;
+  }
+
+  .btn-arrow {
+    transition: all 0.6s cubic-bezier(0.16, 1, 0.3, 1);
+    margin: 0 0 0 20px;
+  }
+
+  &:hover {
+    text-decoration: none;
+
+    .btn-arrow {
+      transform: scale(0.8);
+
+      svg > g {
+        fill: $color-secondary;
+        stroke: $color-secondary;
+      }
+      svg > g path {
+        fill: $color-secondary;
+      }
+      svg > path {
+        fill: $f;
+      }
+    }
+
+    &:before {
+      left: calc(100% - 50px);
+    }
+
+    &:after {
+    }
+  }
+
+  &.ui-line{
+    position: relative;
+    line-height: 19px;
+    
+    &:before {
+      content:close-quote;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100%;
+      height: 3px;
+      background-color: #3B4551;
+    }
+
+  }
+
+  // ui white
+  &.ui-w {
+    color: $f;
+    &:before {
+      background-color: $f;
+    }
+  }
+
+  &.ui-maincolor {
+    color: $color-main;
+  }
+
+  &.ui-submit {
+  }
+}
+
+.ui-btn-main-ol {
+  background-color: transparent;
+  border: 1px solid $color-main;
+  color: $color-main;
+
+  &:hover {
+    color: $color-light;
+    border: 1px solid lighten($color-main, 10);
+    background-color: lighten($color-main, 10);
+    text-decoration: none;
+  }
+}
+
+.ui-btn-light {
+  background-color: $color-light;
+  border: 1px solid $color-light;
+  color: $color-dark;
+
+  &:hover {
+    color: $color-dark;
+    background-color: darken($color-light, 15);
+    border: 1px solid darken($color-light, 15);
+    text-decoration: none;
+  }
+}
+
+.ui-btn-light-accent {
+  background-color: $color-main;
+  border: 1px solid $color-main;
+  color: $color-white;
+
+  &:hover {
+    color: $color-white;
+    background-color: lighten($color-main, 15);
+    border: 1px solid lighten($color-main, 15);
+    text-decoration: none;
+  }
+}
+
+.ui-btn-dark-accent {
+  background-color: $color-dark-accent;
+  border: 1px solid $color-dark-accent;
+  color: $color-white;
+
+  &:hover {
+    color: $color-white;
+    background-color: lighten($color-dark-accent, 15);
+    border: 1px solid lighten($color-dark-accent, 15);
+    text-decoration: none;
+  }
+}
+
+.ui-btn-extra-light-accent {
+  background-color: $color-light;
+  border: 1px solid $color-light;
+  color: $color-white;
+
+  &:hover {
+    color: $color-white;
+    background-color: $color-light;
+    border: 1px solid $color-light;
+    text-decoration: none;
+  }
+}
+
+.ui-btn-dark {
+  background-color: $color-dark;
+  border: 1px solid $color-dark;
+  color: $color-white;
+
+  &:hover {
+    color: $color-white;
+    background-color: lighten($color-dark, 15);
+    border: 1px solid lighten($color-dark, 15);
+    text-decoration: none;
+  }
+}
+
+.ui-btn-light-ol {
+  background-color: transparent;
+  border: 1px solid $color-light;
+  color: $color-light;
+
+  &:hover {
+    color: $color-dark;
+    background-color: rgba($color-light, 0.5);
+    border: 1px solid rgba($color-light, 0.5);
+    text-decoration: none;
+  }
+}
+
+.ui-btn-white {
+  background-color: $color-white;
+  border: 1px solid $color-white;
+  color: $color-main;
+
+  &:hover {
+    color: $color-main;
+    background-color: darken($color-white, 15);
+    border: 1px solid darken($color-white, 15);
+    text-decoration: none;
+  }
+}
+
+.ui-btn-white-ol {
+  background-color: transparent;
+  border: 1px solid $color-white;
+  color: $color-white;
+
+  &:hover {
+    color: $color-main;
+    background-color: darken($color-white, 15);
+    border: 1px solid darken($color-white, 15);
+    text-decoration: none;
+  }
+}
+
+.ui-btn-group {
+  .ui-btn:not(:last-child) {
+    margin-right: 0.85rem;
+  }
+}
+
+.wpforms-submit {
+  position: relative !important;
+  color: $color-white !important;
+  overflow: hidden !important;
+}
