--- a/css/src/scss/partials/_header.scss
+++ b/css/src/scss/partials/_header.scss
@@ -8,6 +8,7 @@
 	padding: 0;
 	background: transparent;
 	
+
 	&.act {
 		background-color: Rgb(255 255 255 / 90%);
 		box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.05);
@@ -18,9 +19,9 @@
 		// min-height: 144px;
 	}
 
-	&:hover {
-		// background-color: $f;
-	}
+	// &:hover {
+	// 	background-color: $f;
+	// }
 
 	&.activemenu {
 		min-height: 134px;
@@ -68,22 +69,15 @@
 		div.logo {
 			margin: 0 30px;
 			position: relative;
-			padding: 20px 0 0;
-			// max-width: 200px;
+
 
 			@media screen and (max-width: 992px) {
 				margin: 0 auto 0 0;
 				padding-left: 0;
 			}
-
-
 			.link-logo {
 				// margin-left: 10px;
 				// display: inline-flex;
-
-				&:hover {
-					opacity: 1;
-				}
 			}
 
 			figure.logo {
