--- a/css/src/scss/modules/_colors.scss
+++ b/css/src/scss/modules/_colors.scss
@@ -1,6 +1,6 @@
 // Color Theme Vars
 $color-main: #4d90ff;
-$color-secondary: #1F3C6A;
+$color-secondary: #1E2F44;
 $color-third: #4d90ff;
 
 $color-dark: darken(#4d90ff, 20%);
