--- a/css/src/scss/partials/_sections.scss
+++ b/css/src/scss/partials/_sections.scss
@@ -29,7 +29,7 @@ section.welcome {
       height: 100%;
       img {
         object-fit: cover;
-        object-position: left;
+        object-position: center;
         height: 100%;
         width: 100%;
         // @media screen and (max-width: 1240px) {
