--- a/css/src/scss/partials/_sections.scss
+++ b/css/src/scss/partials/_sections.scss
@@ -7,10 +7,8 @@ section.welcome {
   min-height: 900px;
   display: flex;
   align-items: center;
-  @media screen and (max-width: 992px) {
-    align-items: flex-end;
-    min-height: 700px;
-  }
+
+
   .img {
     position: absolute;
     top: 0;
@@ -49,23 +47,67 @@ section.welcome {
     z-index: 2;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-end;
+    justify-content: center;
+    align-items: center;
+
     .content {
       max-width: 550px;
       width: 100%;
+      
       @media screen and (max-width: 992px) {
         padding-bottom: 60px;
       }
-      h1.sec-title {
-        // font-family: "IvyPresto Headline" ;
-        font-size: 60px;
-        color: #1f3c6a;
-        letter-spacing: 0em;
-        line-height: 1.1333333333333333;
-        @media screen and (max-width: 992px) {
-          font-size: 50px;
-        }
+
+      img {
+        padding: 250px 0 50px;
+      }
+
+      p {
+        color: $f;
+        font-weight: 500;
+        text-align: center;
+        text-transform: uppercase;
+        // letter-spacing: 2px;
+      }
+    }
+  }
+
+  .arrow-btn {
+    position: absolute;
+    bottom: 30px;
+    // margin-right: -20px;
+    right: 50%;
+
+    a {
+      
+      &:hover {
+        opacity: 0.5;
+      }
+
+      &::before {
+        display: none;
+      }
+    }
+  }
+
+
+  .hero-social {
+    position: absolute;
+    right: 30px;
+    bottom: 50px;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+
+    .social-link {
+      margin: 15px 0;
+
+      &::before {
+        display: none;
+      }
+      
+      &:hover {
+        opacity: 0.5;
       }
     }
   }
