--- a/css/src/scss/modules/_colors.scss
+++ b/css/src/scss/modules/_colors.scss
@@ -1,7 +1,7 @@
 // Color Theme Vars
-$color-main: #4d90ff;
+$color-main: #C2E3D3;
 $color-secondary: #1E2F44;
-$color-third: #4d90ff;
+$color-third: #DDC490;
 
 $color-dark: darken(#4d90ff, 20%);
 $color-dark-accent: darken(#4d90ff, 30%);
