--- a/css/src/scss/partials/_header.scss
+++ b/css/src/scss/partials/_header.scss
@@ -254,6 +254,12 @@
           width: 50px;
           height: 50px;
           border-radius: 50%;
+          cursor: pointer;
+
+          &:hover {
+            transition: 0.3s;
+            transform: scale(0.95);
+          }
 
           @include isXLarge {
             margin: 0 100px 0 0;
@@ -346,7 +352,7 @@
 
 					// first level link
 					> a.menulink {
-						font-family: $font-primary;
+						font-family: $font-secondary;
 						position: static;
 						display: block;
 						margin: 0 15px;
@@ -356,16 +362,21 @@
 						text-align: center;
 						text-transform: capitalize;
 
-						font-weight: normal;
-						font-size: 15px;
+						font-weight: bold;
+						font-size: 16px;
 						color: #000;
 
 						@media screen and (max-width: 1350px) {
 							margin: 0 10px;
-							font-size: 15px;
+							font-size: 16px;
 						}
 
-						@media screen and (max-width: 1200px) {
+						@media screen and (max-width: 1240px) {
+							font-size: 13px;
+							line-height: 1.2;
+						}
+
+            @media screen and (max-width: 1020px) {
 							font-size: 12px;
 							line-height: 1.2;
 						}
