--- a/css/src/scss/partials/_sections.scss
+++ b/css/src/scss/partials/_sections.scss
@@ -4,7 +4,7 @@
 
 section.welcome {
   position: relative;
-  min-height: 900px;
+  min-height: 950px;
   display: flex;
   align-items: center;
 
@@ -112,6 +112,239 @@ section.welcome {
     }
   }
 }
+
+
+section.sculptsure {
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding: 50px 0;
+
+  @include isXLarge {
+    padding: 80px 0;
+  }
+
+
+  .container {
+    position: relative;
+    z-index: 2;
+    display: flex;
+
+    @media screen and (max-width: 992px) {
+      padding: 50px 15px 0;
+    }
+
+
+    .content {
+      width: 100%;
+      display: flex;
+      align-items: flex-start;
+
+      @media screen and (max-width: 992px) {
+        flex-direction: column-reverse;
+      }
+
+      .left-col {
+        width: 50%;
+
+
+        
+        @media screen and (max-width: 992px) {
+          width: 100%;
+        }
+
+        .img {
+          width: 100%;
+          height: 100%;
+          img {
+            object-fit: cover;
+            object-position: center;
+            height: 100%;
+            width: 100%;
+          }
+        } 
+
+
+      }
+
+      .right-col {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        
+
+        .right-content {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+
+  
+
+          p {
+            text-align: center;
+            
+          
+          }
+
+
+        }
+
+          
+        .qoute-col {
+          width: 55%;
+          position: absolute;
+          right: 2%;
+          padding: 20px;
+          background: $color-third;
+          bottom: 40px;
+          display: flex;
+          z-index: -1;
+
+
+          .image-wrapper {
+            position: relative;
+            top: -10px;
+            z-index: 1;
+            img {
+              max-width: 50px;
+              margin: 0 10px;
+            }
+          }
+
+          .image-wrapper-right {
+            position: absolute;
+            z-index: 1;
+            bottom: 60px;
+            right: 100px;
+
+
+            @include isRetina {
+              right: 200px;
+            }
+            img {
+              max-width: 25px;
+            }
+          }
+
+
+          .text-content {
+            p {
+              margin: 0;
+              // z-index: 99;
+              // display: flex;
+         
+              // span {
+              //   position: relative;
+              //   // right: 200px;
+              //   // bottom: 20px;
+                
+               
+              // }
+            }
+  
+            
+            p.reviewer {
+              text-align: right;
+              margin-right: 30px;
+            }
+    
+          }
+  
+
+        }
+  
+
+      }
+
+
+
+    }
+  }
+
+}
+
+section.business {
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding: 50px 0;
+  min-height: 900px;
+
+  @include isXLarge {
+    padding: 80px 0;
+  }
+
+
+  .img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    // max-width: 1400px;
+    margin: 0 auto;
+
+    align-items: center;
+    justify-content: center;
+
+    picture {
+      width: 100%;
+      height: 100%;
+      img {
+        object-fit: cover;
+        object-position: center;
+        height: 100%;
+        width: 100%;
+        // @media screen and (max-width: 1240px) {
+        //   opacity: 0.3;
+        // }
+        // @media screen and (max-width: 992px) {
+        //   opacity: 0.3;
+        // }
+      }
+    }
+
+  }
+
+
+  .container {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    margin: 0;
+    padding: 0;
+
+    .content {
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: $color-secondary;
+      padding: 50px;
+      border-radius: 0 200px 200px 0;
+
+
+      h2 {
+        color: $f;
+      }
+
+      h3 {
+        color: $f;
+      }
+      
+      p {
+        color: $f;
+        text-align: center;
+      }
+    }
+  }
+
+}
+
 
 section.textblock {
   position: relative;
