--- a/css/src/scss/partials/_header.scss
+++ b/css/src/scss/partials/_header.scss
@@ -7,9 +7,11 @@
 	z-index: 123123;
 	padding: 20px 0;
 	background: transparent;
+  transition: 0.3s;
 	
 
 	&.act {
+    transition: 0.3s;
 		background-color: Rgb(255 255 255 / 90%);
 		box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.05);
 	}
@@ -255,6 +257,7 @@
           height: 50px;
           border-radius: 50%;
           cursor: pointer;
+          transition: 0.3s;
 
           &:hover {
             transition: 0.3s;
