--- a/css/src/scss/partials/_sections.scss
+++ b/css/src/scss/partials/_sections.scss
@@ -544,6 +544,83 @@ section.team {
 
 }
 
+section.virtual {
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding: 50px 0;
+  min-height: 900px;
+
+  @include isXLarge {
+    padding: 80px 0;
+  }
+
+
+  .img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    margin: 0 auto;
+
+    align-items: center;
+    justify-content: center;
+
+    picture {
+      width: 100%;
+      height: 100%;
+      img {
+        object-fit: cover;
+        object-position: left;
+        height: 100%;
+        width: 100%;
+        @media screen and (max-width: 1240px) {
+          opacity: 0.3;
+        }
+        // @media screen and (max-width: 992px) {
+        //   opacity: 0.3;
+        // }
+      }
+    }
+
+  }
+
+
+  .container {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    margin: 0;
+    justify-content: flex-end;
+
+    .content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 50%;
+
+      h2 {
+        font-size: 60px;
+
+        @include isXLarge{
+          font-size: 70px;
+        }
+
+        @include isRetina{
+          font-size: 80px;
+        }
+      }
+
+      p {
+        text-align: center;
+      }
+    }
+  }
+
+}
+
 section.textblock {
   position: relative;
   padding: 80px 0;
