--- a/css/src/scss/partials/_sections.scss
+++ b/css/src/scss/partials/_sections.scss
@@ -113,7 +113,6 @@ section.welcome {
   }
 }
 
-
 section.sculptsure {
   position: relative;
   display: flex;
@@ -548,6 +547,7 @@ section.virtual {
   position: relative;
   display: flex;
   align-items: center;
+  justify-content: center;
   padding: 50px 0;
   min-height: 900px;
 
@@ -616,6 +616,207 @@ section.virtual {
       p {
         text-align: center;
       }
+    }
+  }
+
+}
+
+section.hydrafacial {
+  position: relative;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 50px 0;
+  min-height: 900px;
+
+  @include isXLarge {
+    padding: 80px 0;
+  }
+
+
+  .img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    margin: 0 auto;
+
+    align-items: center;
+    justify-content: center;
+
+    picture {
+      width: 100%;
+      height: 100%;
+      img {
+        object-fit: cover;
+        object-position: center;
+        height: 100%;
+        width: 100%;
+        // @media screen and (max-width: 1150px) {
+        //   opacity: 0.3;
+        // }
+        // @media screen and (max-width: 992px) {
+        //   opacity: 0.3;
+        // }
+      }
+    }
+
+  }
+
+
+  .container {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    margin: 0;
+    justify-content: center;
+
+    .content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+
+      h2 {
+        margin-bottom: 50px;
+      }
+
+      .col-container {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        
+        .col-item {
+          width: 30%;
+
+
+          @include isRetina {
+            width: 27%;
+          }
+
+
+          .btn-container {
+            margin-top: 50px;
+          }
+
+          &:nth-child(2) {
+
+            .col-content {
+
+              .slide-container {  
+                width: 100%;
+
+                  .slide-content {
+                    display: flex;
+          
+                    .card {
+                      // width: 45%;
+                      background: transparent;
+                      border: none;
+          
+                      .card-content {
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        justify-content: center;
+                        padding-bottom: 40px;
+
+                        .number {
+                          position: relative;
+                          right: 147px;
+                          width: 30px;
+                          height: 30px;
+                          display: flex;
+                          align-items: center;
+                          justify-content: center;
+                          border-radius: 50%;
+                          background: $color-secondary;
+                          color: $f;
+
+                          span {
+                            font-size: 20px;
+                          }
+                        }
+
+                        h3 {
+                          font-size: 35px;
+                          font-weight: bold;
+                          font-family: $font-secondary;
+                        }
+          
+                        p  {
+                          text-align: center;
+                          padding: 0 30px;
+                          margin-bottom: 40px;
+                        }
+                      }
+                    }
+                  }
+
+                  .swiper-pagination{
+                    position: absolute;
+                    bottom: 0;
+              
+                    @media screen and (max-width: 500px) {
+                      bottom: 0px;
+                    }
+                  }
+              
+                  .swiper-pagination-bullet{
+                    height: 5px;
+                    width: 51px;
+                    border-radius: 1px;
+                    margin: 0 7px;
+                    background: $f;
+              
+                    @media screen and (max-width: 500px) {
+                      height: 5px;
+                      width: 50px;
+                      margin: 0 5px;
+              
+                    }
+                  }
+
+                  .swiper-button-next {
+                    top: 40px;
+                    color: $f;
+                    right: 20px;
+
+                    @include isLarge {
+                      right: 20px;
+                    }
+
+                    @media screen and (max-width: 992px) {
+                      display: none;
+                    }
+
+
+
+                    &:after {
+                      font-size: 27px;
+                    }
+                  }
+
+              }
+
+              
+
+            }
+
+            .btn-container {
+              margin-top: 50px;
+
+              display: flex;
+              justify-content: center;
+            }
+          }
+        }
+      }
+
+
+
     }
   }
 
