--- a/css/src/scss/modules/_colors.scss
+++ b/css/src/scss/modules/_colors.scss
@@ -2,6 +2,7 @@
 $color-main: #C2E3D3;
 $color-secondary: #1E2F44;
 $color-third: #DDC490;
+$color-fourth: #E1C488;
 
 $color-dark: darken(#4d90ff, 20%);
 $color-dark-accent: darken(#4d90ff, 30%);
