--- a/css/src/scss/partials/_sections.scss
+++ b/css/src/scss/partials/_sections.scss
@@ -822,6 +822,391 @@ section.hydrafacial {
 
 }
 
+section.skincare {
+  position: relative;
+  display: flex;
+  padding: 50px 0 0;
+  min-height: 900px;
+
+  @include isXLarge {
+    padding: 80px 0 0;
+  }
+
+
+  .img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    // max-width: 1400px;
+    margin: 0 auto;
+
+    align-items: center;
+    justify-content: center;
+
+    picture {
+      width: 100%;
+      height: 100%;
+      img {
+        object-fit: cover;
+        object-position: center;
+        height: 100%;
+        width: 100%;
+        // @media screen and (max-width: 1240px) {
+        //   opacity: 0.3;
+        // }
+        // @media screen and (max-width: 992px) {
+        //   opacity: 0.3;
+        // }
+      }
+    }
+
+  }
+
+
+  .container {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    // margin: 0;
+    padding: 0;
+    max-width: 100%;
+    align-items: center;
+    justify-content: center;
+
+    .content {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+
+      h2 {
+        text-transform: uppercase;
+      }
+
+      h3 {
+
+      }
+
+      .slider-container {
+        width: 100%;
+        margin-top: 50px;
+        .swiper {
+          padding: 0 40px;
+
+          @media screen and (max-width: 992px) {
+            width: 600px;
+          }
+
+          @media screen and (max-width: 700px) {
+            width: 100%;
+          }
+
+
+
+
+          .swiper-wrapper {
+            width: 100%;
+          }
+
+          .swiper-slide {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            // margin: 0 25px;
+
+
+
+
+
+            .img-container {
+
+              @media screen and (max-width: 992px) {
+                width: 450px;
+                margin: 0 auto
+              }
+
+              @media screen and (max-width: 700px) {
+                width: 350px;
+              }
+    
+              @media screen and (max-width: 500px) {
+                width: 100%;
+              }
+              padding: 0 25px;
+    
+
+              picture {
+                
+                img {
+                  width: 100%;
+                  height: 100%;
+                  margin-bottom: 30px;
+                }
+              }
+            }
+
+            p {
+              text-align: center;
+              font-weight: 500;
+              height: 60px;
+              margin-top: 20px;
+              margin-bottom: 0;
+              padding: 0 25px;
+            }    
+            
+            span {
+              font-size: 200px;
+              font-family: $font-primary;
+              width: 100%;
+              display: flex;
+              justify-content: center;
+              // padding-right: 20px;
+              padding: 0 25px;
+
+              &.number {
+               
+                border-left: 5px solid $color-fourth;
+              }
+            }
+
+
+          }
+
+          .swiper-button-next,.swiper-button-prev {
+            color: $f;
+            right: 5px;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: 0.3s;
+            top: 30%;
+
+            .icon {
+              background: $color-secondary;
+              width: 50px;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              height: 50px;
+              border-radius: 50%;
+              transition: 0.3s;
+
+          
+              img {
+                width: 30px;
+                height: 30px;
+              }
+              
+            }
+
+            &:after {
+              // font-size: 25px;
+              // width: 100%;
+              // height: 100%;
+              // display: flex;
+              // align-items: center;
+              // justify-content: center;
+              // margin-left: 5px;
+              display: none;
+            }
+
+
+
+            &:hover {
+              opacity: 0.6;
+              transition: 0.3;
+            }
+          }
+
+          .swiper-button-prev {
+            left: 5px;
+          }
+        }
+      }
+
+      .btn-container {
+        margin-top: 20px;
+
+        @include isXLarge {
+          margin-top: 50px;
+        }
+      }
+    }
+  }
+
+}
+
+section.article {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 50px 0;
+  min-height: 900px;
+
+  @include isXLarge {
+    padding: 80px 0;
+  }
+
+
+  // .img {
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   right: 0;
+  //   bottom: 0;
+  //   display: flex;
+  //   margin: 0 auto;
+
+  //   align-items: center;
+  //   justify-content: center;
+
+  //   picture {
+  //     width: 100%;
+  //     height: 100%;
+  //     img {
+  //       object-fit: cover;
+  //       object-position: left;
+  //       height: 100%;
+  //       width: 100%;
+  //       @media screen and (max-width: 1240px) {
+  //         opacity: 0.3;
+  //       }
+  //       // @media screen and (max-width: 992px) {
+  //       //   opacity: 0.3;
+  //       // }
+  //     }
+  //   }
+
+  // }
+
+
+  .container {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    margin: 0;
+    justify-content: center;
+
+    .content {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+
+
+      .col-item {
+        width: 48%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-end;
+
+        .img-wrapper {
+          position: absolute;
+          z-index: 0;
+
+          picture {
+            &::after {
+              content: close-quote;
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              background: #fff;
+              background: -webkit-gradient(linear,left top,left bottom,color-stop(25%,hsla(0,0%,100%,0)),color-stop(85%,#212529));
+              background: -o-linear-gradient(top,hsla(0,0%,100%,0) 25%,#212529 85%);
+              background: linear-gradient(180deg,hsla(0,0%,100%,0) 25%,#212529 85%);
+              opacity: .9;
+              height: 100%;
+            }
+          }
+        }
+
+        .text-wrap {
+          z-index: 1;
+
+          h4 {
+            color: $f;
+          }
+
+          p {
+            color: $f;
+          }
+        } 
+        
+
+        &:nth-child(2) {
+           justify-content: space-between;
+          .col-content {
+            display: flex;
+            justify-content: space-between;
+
+            .img-wrap {
+              width: 30%;
+            }
+
+            .text-wrap {
+              width: 65%;
+
+              h4 {
+                font-size: 15px;
+                font-weight: bold;
+                font-family: $font-secondary;
+                color: $b;
+
+                @include isRetina {
+                  font-size: 20px;
+                }
+              }
+
+              span.date {
+                p {
+                  font-size: 12px;
+                  text-transform: uppercase;
+                  letter-spacing: 0;
+                  font-weight: 500;
+                  color: $b;
+                  @include isRetina {
+                    font-size: 14px;
+                  }
+                }
+              }
+
+              p {
+                font-weight: 500;
+                font-size: 14px;
+                color: $b;
+              }
+            }
+            
+            .btn-container {
+              display: flex;
+              justify-content: flex-end;
+            }
+          }
+        }
+      }
+
+    }
+  }
+
+}
+
+
+
+
+
+
+
 section.textblock {
   position: relative;
   padding: 80px 0;
